--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "test": "jest",
-    "lint": "eslint --ext=js ."
+    "lint": "eslint --ext=js .",
+    "precommit": "yarn lint",
+    "commit": "git commit"
   },
   "rnpm": {
     "assets": [
