Add Folders scan and list functionality
Add Realm Data Storage

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=heycloudy.keystore
+MYAPP_RELEASE_KEY_ALIAS=heycloudy
+MYAPP_RELEASE_STORE_PASSWORD=123456789
+MYAPP_RELEASE_KEY_PASSWORD=123456789
