Add RNFS to read image base64 data from uri

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ android {
 }
 
 dependencies {
+    compile project(path: ':react-native-fs')
     compile project(':realm')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
