--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,7 @@ android {
 
 dependencies {
     compile project(path: ':react-native-fs')
+    compile project(path: ':react-native-fetch-blob')
     compile project(':realm')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
