--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "latest",
     "react": "16.3.1",
     "react-native": "0.55.3",
+    "react-native-background-task": "^0.2.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.9.12",
     "react-native-vector-icons": "^4.6.0",
