--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-background-upload": "^4.4.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.9.12",
+    "react-native-permissions": "^1.1.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "realm": "^2.2.20",
