App Name & package name change

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,7 +109,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.splashscreen"
+        applicationId "com.mycloudbackup"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
