--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.3",
+    "babel-plugin-transform-remove-console": "^6.9.1",
     "eslint": "^4.19.1",
     "immutable": "^3.8.2",
     "prop-types": "latest",
